添加浏览器显示小图标

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<title>Frank Admin</title>
+		<link rel="shortcut icon" th:href="@{/favicon.ico}"/>
+  		 <link rel="bookmark" th:href="@{/favicon.ico}"/>
 		<!-- 依 赖 样 式 -->
 		<link rel="stylesheet" th:href="@{~/component/pear/css/pear.css}"  media="all">
 		<!-- 加 载 样 式-->
@@ -27,8 +29,8 @@
 				<!-- 顶 部 右 侧 菜 单 -->
 				<div id="control" class="layui-layout-control"></div>
 				<ul class="layui-nav layui-layout-right">
-					<li class="layui-nav-item layui-hide-xs"><a href="#" class="fullScreen layui-icon layui-icon-screen-full"></a></li>
-					<!-- <li class="layui-nav-item layui-hide-xs"><a href="http://www.pearadmin.com" class="layui-icon layui-icon-website"></a></li> -->
+					<li class="layui-nav-item layui-hide-xs"><a href="#" class="fullScreen layui-icon layui-icon-screen-full" title="全屏显示"></a></li>
+					<li class="layui-nav-item layui-hide-xs"><a href="https://gitee.com/chenhuazhan-java/frank-boot.git" target="_blank" title="Gitee仓库地址" class="layui-icon layui-icon-website"></a></li>
 					<li class="layui-nav-item">
 						<!-- 头 像 -->
 						<a href="javascript:;">
