--- a/src/main/resources/templates/readme.html
+++ b/src/main/resources/templates/readme.html
@@ -7,6 +7,10 @@
 </head>
 <body >
 	<div style="margin-left: 36px;">
+		<h3>注意：</h3>
+		<div>
+			<blockquote>本系统为演示站点，每隔30分钟初始化数据自动还原。&nbsp;&nbsp;<a href="https://gitee.com/chenhuazhan-java/frank-boot.git" class="layui-icon layui-icon-website">Gitee仓库地址</a></blockquote>
+		</div>
 		<h3>前言：</h3>
 		<div>
 			<blockquote>这是一款基于SpringBoot+SpringSecurity+Mybatis的RBAC权限管理系统,目前只做了简单的权限功能，经简单测试功能基本正常</blockquote>
