--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,7 +11,7 @@
 	<body background="../../admin/images/background2.svg" style="background-size: cover;">
 		<form class="layui-form" action="javascript:void(0);">
 			<div class="layui-form-item">
-				<img class="logo" src="../../admin/images/logo.png" />
+				<img class="logo" src="../../admin/images/logo-cat.png" />
 				<div class="title">frank-boot</div>
 				<div class="desc">
 					springboot + springsecurity + mybatis + mysql
