修改跳转链接

--- a/src/main/resources/templates/readme.html
+++ b/src/main/resources/templates/readme.html
@@ -9,7 +9,7 @@
 	<div style="margin-left: 36px;">
 		<h3>注意：</h3>
 		<div>
-			<blockquote>本系统为演示站点，每隔30分钟初始化数据自动还原。&nbsp;&nbsp;<a href="https://gitee.com/chenhuazhan-java/frank-boot.git" class="layui-icon layui-icon-website">Gitee仓库地址</a></blockquote>
+			<blockquote>本系统为演示站点，每隔30分钟初始化数据自动还原。&nbsp;&nbsp;<a href="https://gitee.com/chenhuazhan-java/frank-boot.git" target="_blank" class="layui-icon layui-icon-website">Gitee仓库地址</a></blockquote>
 		</div>
 		<h3>前言：</h3>
 		<div>
