--- a/src/main/resources/templates/view/system/role/list.html
+++ b/src/main/resources/templates/view/system/role/list.html
@@ -80,6 +80,10 @@ layui.use(['form', 'layedit', 'laydate','element','table','dtree'], function(){
 	  ,toolbar:true
 	  ,defaultToolbar: ['filter']
 	  ,parseData: function(res){ //res 即为原始返回的数据
+		   	if(res.code != 0){
+	  			layer.msg(res.msg,{icon:2,time:2000});
+	  			return;
+	  		}
 		    return {
 		      "code": res.code, //解析接口状态
 		      "msg": res.msg, //解析提示文本
