添加登录日志模块

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
 					<li class="layui-nav-item">
 						<!-- 头 像 -->
 						<a href="javascript:;">
-							<img src="admin/images/user-info.jpg" class="layui-nav-img" ><label sec:authentication="name"></label>
+							<img src="admin/images/user-info.jpg" class="layui-nav-img" style="border-radius:20%"><label sec:authentication="name"></label>
 						</a>
 						<!-- 功 能 菜 单 -->
 						<dl class="layui-nav-child">
@@ -64,7 +64,7 @@
 			</div>
 			<div class="layui-footer pear-mini layui-header" style="z-index: 9999;background-color: #eee;">
 		    	<!-- 版权信息 -->
-		    	© 2020 www.chenhuazhan.com All Rights Reserved
+		    	© 2020-2021 frank.chenhuazhan.com All Rights Reserved
 		  	</div>
 		</div>
 		
