优化登录页面

--- a/src/main/resources/templates/view/system/loginlog/list.html
+++ b/src/main/resources/templates/view/system/loginlog/list.html
@@ -88,12 +88,12 @@ layui.use(['form', 'layedit', 'laydate','element','table','dtree'], function(){
 		  	{checkbox: true}
 		    ,{type: 'numbers', title: '序号', width: 80, align: 'center',}
 		    ,{field: 'username', title: '用户账号', align: 'center'}
-		    ,{field: 'ip', title: '操作人ip', align: 'center'}
+		    ,{field: 'ip', title: 'ip', align: 'center'}
 		    ,{field: 'address', title: '操作地点', align: 'center'}
 		    ,{field: 'os', title: '系统', align: 'center'}
 		    ,{field: 'browser', title: '浏览器', align: 'center'}
 		    ,{field: 'onlineText', title: '状态',  align: 'center',templet: '#titleTpl'}
-		    ,{field: 'createTime', title: '创建时间', align: 'left',width:200}
+		    ,{field: 'createTime', title: '登录时间', align: 'left',width:200}
 		    //,{toolbar: '#loginlog-bar', title: '操作', minWidth: 100,  align: 'left',}
 	  ]] 
 	  
