--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -17,6 +17,14 @@ body{
 	background: #5FB878;
 	width: 100%;
 	height: 400px;
+	
+	/* 文字 */
+	font-size: 32px;
+    color: #fff;
+    line-height: 300px;
+    text-align: center;
+    font-family: monospace;
+    
 }
 .ipt{
 	border: 1px solid #d3d3d3;
@@ -121,6 +129,15 @@ $(function(){
 	if (top.location != self.location) {
 	    top.location = self.location
 	};
+	
+	// 绑定回车事件
+	$("body").keydown(function () {
+		if (event.keyCode == "13") { // keyCode=13是回车键
+			$("#login").click(); 
+		}
+	});
+	
+	
 	//得到焦点
 	$("#password").focus(function(){
 		$("#left_hand").animate({
@@ -151,6 +168,8 @@ $(function(){
 
 function login(){
 	
+	$("#error").html("");
+	
 	$("#login").attr("disabled",true);
 	$("#login").css({'background-color' : '#c2c2c2'});
 	$("#login").css({'border': '1px solid #c2c2c2'});
@@ -175,8 +194,19 @@ function login(){
 			},800);
 		}else if("Bad credentials" == res.msg){
 			$("#error").html("账号或密码错误！");
+			
+			$("#login").attr("disabled",false);
+			$("#login").css({'background-color' : '#5FB878'});
+			$("#login").css({'border': '1px solid #5FB878'});
+			$("#login").html('登录');
+			
 		}else{
 			$("#error").html(res.msg);
+			
+			$("#login").attr("disabled",false);
+			$("#login").css({'background-color' : '#5FB878'});
+			$("#login").css({'border': '1px solid #5FB878'});
+			$("#login").html('登录');
 		}
 	});
 }
@@ -184,6 +214,8 @@ function login(){
 </head>
 <body>
 <div class="top_div">
+	 
+	<span style="vertical-align:-webkit-baseline-middle;"><img src="admin/images/logo-jiandan.png" width="50px"></span>Frank Boot 权限管理系统
 </div>
 <div>
 	<div style="background: rgb(255, 255, 255); margin: -100px auto auto; border: 1px solid rgb(231, 231, 231); border-image: none; width: 400px; height: 200px; text-align: center;border-radius: 4px;">
