实现了监控管理模块的服务器信息监控，可以查看到服务器cpu、内存、JVM、硬盘等使用情况

--- a/src/main/resources/templates/readme.html
+++ b/src/main/resources/templates/readme.html
@@ -98,162 +98,12 @@
 				  <li class="layui-timeline-item">
 				    <i class="layui-icon layui-timeline-axis"></i>
 				    <div class="layui-timeline-content layui-text">
-				      <h3 class="layui-timeline-title">2021-05-23</h3>
+				      <h3 class="layui-timeline-title">2021-05-30</h3>
 				      <p>
-				      		通过实现SpringSecurity提供的 AuthenticationSuccessHandler 接口<br>和 AuthenticationFailureHandler 接口完成用户登录日志的记录和用户在线或离线状态查看
+				      		实现了监控管理模块的服务器信息监控，可以查看到服务器cpu、内存、JVM、硬盘等使用情况
 				      </p>
 				    </div>
 				  </li>
-				  
-				  <li class="layui-timeline-item">
-				    <i class="layui-icon layui-timeline-axis"></i>
-				    <div class="layui-timeline-content layui-text">
-				      <h3 class="layui-timeline-title">2021-05-02</h3>
-				      <p>
-				      		重新优化登录界面，替换了登录界面
-				      </p>
-				    </div>
-				  </li>
-				  
-				  
-				  <li class="layui-timeline-item">
-				    <i class="layui-icon layui-timeline-axis"></i>
-				    <div class="layui-timeline-content layui-text">
-				      <h3 class="layui-timeline-title">2021-04-17</h3>
-				      <p>
-				      		通过SpringAop面向切面实现已注解的方式记录操作日志功能
-				      </p>
-				    </div>
-				  </li>
-				  
-				  <li class="layui-timeline-item">
-				    <i class="layui-icon layui-timeline-axis"></i>
-				    <div class="layui-timeline-content layui-text">
-				      <h3 class="layui-timeline-title">2021-01-20</h3>
-				      <p>
-				      		重新优化了现有功能模块的部分代码逻辑
-				      </p>
-				    </div>
-				  </li>
-				  
-				  <li class="layui-timeline-item">
-				    <i class="layui-icon layui-timeline-axis"></i>
-				    <div class="layui-timeline-content layui-text">
-				      <h3 class="layui-timeline-title">2021-01-10</h3>
-				      <p>
-				      		Frank Boot 系统上线，权限功能基本完善
-				      </p>
-				    </div>
-				  </li>
-				</ul>
-		    	</div>
-		    </div>
-
-
-		
-		
-		    <!-- <div class="layui-col-md6" style="padding: 0 40px; background-color: #fff; margin: 16px 0px;">
-		    	<br><br>
-		    	<ul class="layui-timeline">
-				  <li class="layui-timeline-item">
-				    <i class="layui-icon layui-timeline-axis"></i>
-				    <div class="layui-timeline-content layui-text">
-				      <h3 class="layui-timeline-title">注意</h3>
-				      <p>
-				        	本系统为演示站点，每隔30分钟初始化数据自动还原。&nbsp;&nbsp;
-				        	<a href="https://gitee.com/chenhuazhan-java/frank-boot.git" target="_blank" class="layui-icon layui-icon-website">Gitee仓库地址</a>
-				      </p>
-				    </div>
-				  </li>
-				  
-				  <li class="layui-timeline-item">
-				    <i class="layui-icon layui-timeline-axis"></i>
-				    <div class="layui-timeline-content layui-text">
-				      <h3 class="layui-timeline-title">前言</h3>
-				      <p>
-				      	这是一款基于SpringBoot+SpringSecurity+Mybatis的RBAC权限管理系统,目前只做了简单的权限功能，经简单测试功能基本正常
-				      </p>
-				    </div>
-				  </li>
-				  
-				  <li class="layui-timeline-item">
-				    <i class="layui-icon layui-timeline-axis"></i>
-				    <div class="layui-timeline-content layui-text">
-				      <h3 class="layui-timeline-title">说明</h3>
-				      <p>
-				      	本项目目前只适合作为一个学习项目，暂不建议用于实际开发，未经过系统全面测试，肯定存在着不少的bug
-				      </p>
-				    </div>
-				  </li>
-				  
-				  <li class="layui-timeline-item">
-				    <i class="layui-icon layui-timeline-axis"></i>
-				    <div class="layui-timeline-content layui-text">
-				      <h3 class="layui-timeline-title">项目中初始用户和密码</h3>
-				      <p>
-				      		用户：admin 密码：123456<br>
-							新建用户的密码统一默认：123456<br>
-							目前修改密码功能暂未开发<br>
-				      </p>
-				    </div>
-				  </li>
-				  
-				  <li class="layui-timeline-item">
-				    <i class="layui-icon layui-timeline-axis"></i>
-				    <div class="layui-timeline-content layui-text">
-				      <h3 class="layui-timeline-title">系统功能</h3>
-				      <p>
-				      	- 用户管理：提供系统用户配置及角色关联<br>
-						- 角色管理：提供角色与菜单权限关联<br>
-						- 菜单管理：提供系统菜单及目录及按钮配置操作<br>
-						- 部门管理：提供系统部门配置<br>
-				      </p>
-				    </div>
-				  </li>
-				  
-				  <li class="layui-timeline-item">
-				    <i class="layui-icon layui-timeline-axis"></i>
-				    <div class="layui-timeline-content layui-text">
-				      <h3 class="layui-timeline-title">涉及的技术及框架</h3>
-				      <p>
-				      		- Java1.8 <br>
-							- SpringBoot2.4.1 <br>
-							- SpringSecurity <br>
-							- MyBatis<br>
-							- MySql<br>
-							- Druid<br>
-							- 前端&nbsp;&nbsp;<a href="https://www.layui.com/" target="_blank">Layui</a><br>
-							- 前端基于layui的&nbsp;&nbsp; <a href="http://www.pearadmin.com/" target="_blank">pear admin layui</a><br>
-							- ...
-				      </p>
-				    </div>
-				  </li>
-				  
-				  <li class="layui-timeline-item">
-				    <i class="layui-icon layui-timeline-axis"></i>
-				    <div class="layui-timeline-content layui-text">
-				      <h3 class="layui-timeline-title">涉及的技术及框架</h3>
-				      <p>
-				      		- Java1.8 <br>
-							- SpringBoot2.4.1 <br>
-							- SpringSecurity <br>
-							- MyBatis<br>
-							- MySql<br>
-							- Druid<br>
-							- 前端&nbsp;&nbsp;<a href="https://www.layui.com/" target="_blank">Layui</a><br>
-							- 前端基于layui的&nbsp;&nbsp; <a href="http://www.pearadmin.com/" target="_blank">pear admin layui</a><br>
-							- ...
-				      </p>
-				    </div>
-				  </li>
-				  
-				</ul> 
-		    	
-		    </div> -->
-		    
-		    <!-- <div class="layui-col-md6" style="padding: 0 40px; background-color: #fff; margin: 16px 0px;">
-		    	<br><br>
-		    	<ul class="layui-timeline">
 				  
 				  <li class="layui-timeline-item">
 				    <i class="layui-icon layui-timeline-axis"></i>
@@ -305,10 +155,9 @@
 				      </p>
 				    </div>
 				  </li>
-				</ul> 
-		    
-		    
-		    </div> -->
+				</ul>
+		    	</div>
+		    </div>
 		</div>
 	</div>
 <script th:src="@{~/component/layui/layui.js}" charset="utf-8"></script>
@@ -318,7 +167,6 @@
 layui.use(['form', 'layedit', 'laydate','element','table','dtree'], function(){
   var form = layui.form;
   
-  //各种基于事件的操作，下面会有进一步介绍
 });
 </script>
 	
