实现了角色权限控制精确到按钮级别，可以对不同角色配置不同的菜单权限，比如没有新增权限，则在前端页面不会展示新增按钮，同时后端调用新增接口也会提示无操作权限。

--- a/src/main/resources/templates/readme.html
+++ b/src/main/resources/templates/readme.html
@@ -79,8 +79,9 @@
 							- SpringBoot2.4.1 <br>
 							- SpringSecurity <br>
 							- MyBatis<br>
-							- MySql<br>
+							- MySql5.6<br>
 							- Druid<br>
+							- Thymeleaf<br>
 							- 前端&nbsp;&nbsp;<a href="https://www.layui.com/" target="_blank">Layui</a><br>
 							- 前端基于layui的&nbsp;&nbsp; <a href="http://www.pearadmin.com/" target="_blank">pear admin layui</a><br>
 							- ...
@@ -94,7 +95,17 @@
 		    <div class="layui-col-md6">
 		    	<div style="padding: 16px 40px; background-color: #fff; margin: 16px 0px;">
 		    		<ul class="layui-timeline">
-				  
+
+					<li class="layui-timeline-item">
+						<i class="layui-icon layui-timeline-axis"></i>
+						<div class="layui-timeline-content layui-text">
+							<h3 class="layui-timeline-title">2021-06-20</h3>
+							<p>
+								实现了角色权限控制精确到按钮级别，可以对不同角色配置不同的菜单权限，比如没有新增权限，则在前端页面不会展示新增按钮，同时后端调用新增接口也会提示无操作权限。
+							</p>
+						</div>
+					</li>
+
 				  <li class="layui-timeline-item">
 				    <i class="layui-icon layui-timeline-axis"></i>
 				    <div class="layui-timeline-content layui-text">
@@ -104,6 +115,8 @@
 				      </p>
 				    </div>
 				  </li>
+
+
 				  
 				  <li class="layui-timeline-item">
 				    <i class="layui-icon layui-timeline-axis"></i>
