--- a/src/main/resources/templates/view/system/role/list.html
+++ b/src/main/resources/templates/view/system/role/list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US" xmlns:th="http://www.thymeleaf.org">
+<html lang="en-US" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -30,16 +30,16 @@
 			
 				<div style="margin-top: 16px;">
 					<div class="layui-inline">
-						<button type="button" class="pear-btn pear-btn-success" lay-submit lay-filter="search"><i class="layui-icon layui-icon-search"></i> 查询</button>
+						<button sec:authorize="hasAuthority('sys:role:select')" type="button" class="pear-btn pear-btn-success" lay-submit lay-filter="search"><i class="layui-icon layui-icon-search"></i> 查询</button>
 					</div>
 					<div class="layui-inline">
-						<button type="reset" class="pear-btn pear-btn-warming" ><i class="layui-icon layui-icon-refresh"></i> 重置</button>
+						<button sec:authorize="hasAuthority('sys:role:select')" type="reset" class="pear-btn pear-btn-warming" ><i class="layui-icon layui-icon-refresh"></i> 重置</button>
 					</div>
 					<div class="layui-inline">
-						<button type="button" class="pear-btn pear-btn-primary" id="add"><i class="layui-icon layui-icon-addition"></i> 新增 </button>
+						<button sec:authorize="hasAuthority('sys:role:insert')" type="button" class="pear-btn pear-btn-primary" id="add"><i class="layui-icon layui-icon-addition"></i> 新增 </button>
 					</div>
 					<div class="layui-inline">
-						<button type="button" class="pear-btn pear-btn-danger" id="batchDelete" ><i class="layui-icon layui-icon-delete"></i> 批量删除 </button>
+						<button sec:authorize="hasAuthority('sys:role:delete')" type="button" class="pear-btn pear-btn-danger" id="batchDelete" ><i class="layui-icon layui-icon-delete"></i> 批量删除 </button>
 					</div>
 				</div>
 			</form>
@@ -51,8 +51,8 @@
 
 <!-- 列表工具：编辑、删除 -->
 <script type="text/html" id="role-bar">
-	<button class="pear-btn pear-btn-primary pear-btn-sm" lay-event="edit" title="编辑"><i class="layui-icon layui-icon-edit"></i></button>
-	<button class="pear-btn pear-btn-danger pear-btn-sm" lay-event="delete" title="删除"><i class="layui-icon layui-icon-delete"></i></button>
+	<button sec:authorize="hasAuthority('sys:role:update')" class="pear-btn pear-btn-primary pear-btn-sm" lay-event="edit" title="编辑"><i class="layui-icon layui-icon-edit"></i></button>
+	<button sec:authorize="hasAuthority('sys:role:delete')" class="pear-btn pear-btn-danger pear-btn-sm" lay-event="delete" title="删除"><i class="layui-icon layui-icon-delete"></i></button>
 </script>
 
 <!-- 列表账号状态开关：0-禁用，1-正常 -->
