优化登录逻辑

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -238,7 +238,7 @@ function login(){
 		<div style="height: 50px; line-height: 58px; margin-top: 30px; border-top-color: rgb(231, 231, 231); border-top-width: 1px; border-top-style: solid;">
 			<P style="margin: 0px 34px 20px 45px;">
 			<!-- <span style="float: left;">欢迎登录Frank Boot</span>  -->
-			<span style="font-weight: bold;font-size: 14px;"><font color="#5FB878" id="success"></font><font color="red" id="error"></font></span>
+			<span style="font-weight: bold;font-size: 14px;"><span style="color: #5FB878" id="success"></span><span style="color: #FF5722" id="error"></span></span>
 	        <span style="float: right;"> 
 	              <!-- <input type="submit" style="background: rgb(0, 142, 173); padding: 7px 10px; border-radius: 4px; border: 1px solid rgb(26, 117, 152); border-image: none; color: rgb(255, 255, 255); font-weight: bold;" value="登录"/> --> 
 	              <button id="login" onclick="login()" style="background: #5FB878; padding: 7px 10px; border-radius: 4px; border: 1px solid #5FB878; border-image: none; color: rgb(255, 255, 255); font-weight: bold;">登&nbsp;&nbsp;录</button>
