--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -35,7 +35,7 @@
 					<li class="layui-nav-item">
 						<!-- 头 像 -->
 						<a href="javascript:;">
-							<img src="admin/images/user-info.jpg" class="layui-nav-img" style="border-radius:20%">
+							<img src="admin/images/user-info.jpg" class="layui-nav-img" style="border-radius:20%"><label sec:authentication="name"></label>
 						</a>
 						<!-- 功 能 菜 单 -->
 						<dl class="layui-nav-child">
